html layout assignment

--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,17 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<html>
+	<head>
+
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>First Page</title>
+
+	</head>
+	<body>
+
+		<div id="backgroundGray">
+			<div id="topBar"></div>
+			<div id="whiteBox"></div>
+			<div id="footerBox"></div>
+		</div>
+
+	</body>
+</html>
